[project]
name = "blog-builder"
version = "0.1.0"
description = ""
authors = [{ name = "David Buckley", email = "david@davidbuckley.ca" }]
requires-python = "~=3.9"
license = "MIT"
dependencies = ["Jinja2>=3.1.2,<4", "mistletoe>=1.4.0,<2"]

[project.scripts]
build = "blog_builder.blog_builder:build"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
